[LRN] Fraction's denominator spacing fixed

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -498,7 +498,7 @@
 
   .mq-denominator {
     border-top: 1px solid;
-    padding: .1em .1em 1px .1em;
+    padding: .2em .1em 1px .1em;
   }
 
   &.mq-polyatomic {
